0x02-functions_nested_loops/5-sign.c:1:18:
nclude "main.h"0
      |                  ^
5-sign.c: In function ‘print_sign’:
5-sign.c:10:10: error: ‘o’ undeclared (first use in this function)
   10 |  if (n > o)
      |          ^
5-sign.c:10:10: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
root@77d30398ae2a:~/alx-low_level_programming/0x02-functions_nested_loops# cat 5-sign.c
#include "main.h"0

/**
 * print_sign - checkinkg no
 * @n: the int to check no
 * Return: 1 if n is greater than o, 0 if n is 0, -1 if n is less than 0
 */
int print_sign(int n)
{
        if (n > o)
        {
                _putchar('+');
                return (1);
        }
        else if (n == 0)
        {
                _putchar(48);
                return (0);
        }
        else if (n < 0)
        {
                _putchar('-');
        }
        return (-1);
}
